// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarView changes tabs correctly 1`] = `
<div
  className=""
>
  <WithStyles(Tabs)
    indicatorColor="primary"
    onChange={[Function]}
    textColor="primary"
    value="browse"
    variant="fullWidth"
  >
    <WithStyles(Tab)
      className=""
      label="Search"
      value="search"
    />
    <WithStyles(Tab)
      className=""
      label="Browse"
      value="browse"
    />
    <WithStyles(Tab)
      className=""
      label="Cart"
      value="cart"
    />
  </WithStyles(Tabs)>
  <Connect(Browse) />
</div>
`;

exports[`SidebarView changes to cart correctly 1`] = `
<div
  className=""
>
  <WithStyles(Tabs)
    indicatorColor="primary"
    onChange={[Function]}
    textColor="primary"
    value="cart"
    variant="fullWidth"
  >
    <WithStyles(Tab)
      className=""
      label="Search"
      value="search"
    />
    <WithStyles(Tab)
      className=""
      label="Browse"
      value="browse"
    />
    <WithStyles(Tab)
      className=""
      label="Cart"
      value="cart"
    />
  </WithStyles(Tabs)>
  <Connect(Component) />
</div>
`;

exports[`SidebarView renders correctly 1`] = `
<div
  className=""
>
  <WithStyles(Tabs)
    indicatorColor="primary"
    onChange={[Function]}
    textColor="primary"
    value="search"
    variant="fullWidth"
  >
    <WithStyles(Tab)
      className=""
      label="Search"
      value="search"
    />
    <WithStyles(Tab)
      className=""
      label="Browse"
      value="browse"
    />
    <WithStyles(Tab)
      className=""
      label="Cart"
      value="cart"
    />
  </WithStyles(Tabs)>
  <Connect(Component) />
</div>
`;
